# cubesat-kit

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  STM32F407VGTx_FLASH.ld  project.yml
.github/workflows/: ci.yml
cmake/: arm-none-eabi.cmake
config/: FreeRTOSConfig.h  stm32f4xx_hal_conf.h
sim/: cubesat.repl  cubesat.resc
sim/tests/: test_boot.robot
src/: main.c
src/app/: mission.c  mission.h
src/hal/: hal_gpio.c  hal_gpio.h  hal_i2c.c  hal_i2c.h  hal_spi.c  hal_spi.h  hal_uart.c  hal_uart.h
src/subsystems/: comm.c  comm.h  eps.c  eps.h  obc.c  obc.h
test/: test_comm.c  test_eps.c  test_obc.c
test/support/: test_helpers.h
